# BearOS

./: .hgignore  CMakeLists.txt.standalone  LICENSE  README  build_flags.txt  cpo.sh  mkbuild  readme_sys_files.txt  readme_usr_files.txt
.hg/: dirstate  last-message.txt  undo.desc  undo.dirstate
.hg/cache/: branchheads-served  tags
.hg/store/: 00changelog.i  00manifest.d  00manifest.i  fncache  phaseroots  undo
.hg/store/data/: _c_make_lists.txt.i  _c_make_lists.txt.slb.i  _c_make_lists.txt.standalone.i  _r_e_a_d_m_e.html.i  _r_e_a_d_m_e.i  cpo.sh.i  (+9 more)
scripts/: CMakeLists.txt  CMakeLists.txt.standalone  datafile  mkall  mkbuild  start_dhcp  tests
sys/: CMakeLists.txt
sys/boot/: CMakeLists.txt  README.Ccode
sys/boot/boot1/: CMakeLists.txt  boot1.S
sys/boot/boot2/: CMakeLists.txt  boot.ld  bootelf.c  bootmemory.c  main.c
sys/boot/kboot2/: CMakeLists.txt
sys/boot/mbr/: CMakeLists.txt  mbr.S
sys/hypv/: CMakeLists.txt  asm.S  asm.h  ept.c  hypervisor.c  hypv.ld  vmexit.c  vmx.c  vproc.c
sys/include/: acpi.h  apic.h  asm_subroutines.h  bootconstants.h  bootinterrupts.h  bootmemory.h  check_type.h  constants.h  container_of.h  disklabel.h  diversity.h  elf.h  elf_loader.h  ept.h  fatfs.h  ff_const.h  ff_types.h  ffconf.h  file_abstraction.h  hash.h  interrupts.h  ke1000.h  kernel.h  khash.h  kload.h  kmalloc-private.h  kmalloc.h  kmalloc_sites.h  kmsg.h  kqueue.h  ksched.h  kstdarg.h  kstdio.h  kstring.h  ksyscall.h  ktime.h  ktimer.h  kvcall.h  kvmem.h  kvmem_sites.h  (+29 more)
sys/kernel/: CMakeLists.txt.bear  kernel.c  kernel.ld  kload.c  kmsg.c  kprocman.c  ksched.c  ksyscall.c  kvcall.c  kvmem.c  kwait.c
sys/kernel/ke1000/: ke1000.c
sys/kernel/trampoline/: CMakeLists.txt  trampoline.S
sys/utils/: acpi.c  asm_interrupts.S  asm_subroutines.S  diversity.c  elf_loader.c  ff.c  file_abstraction.c  interrupts.c  ioapic.c  khash.c  kmalloc.c  kqueue.c  kstdio.c  kstring.c  ktime.c  ktimer.c  list.c  local_apic.c  pci.c  pes.c  ramio.c  random.c  semaphore.c  sha256.c  smp.c  tsc.c  vector.c  vk.c  vmem_layer.c  vmx_utils.c
tools/fdisk/: Makefile_standalone  disklabel.c  disklabel.h  fdisk_script.sh  ls.sh  mbr_partition.h  partition.sh.standalone  uuid.h
tools/linker/: userbin.ld
usr/: CMakeLists.txt
usr/include/: aim9.h  asm_linkage.h  jobs.h  limits.h  lock.h  msg.h  msg_types.h  netdb.h  newlib.h  poll.h  pty.h  redirect.h  ring0.h  signal.h  swint.h
usr/include/arpa/: inet.h
usr/include/netinet/: in.h  in_systm.h  ip.h
usr/include/sbin/: README  bear_compat.h  bsock.h  daemon_msg_types.h  daemond.h  dma.h  driver_api.h  e1000.h  e1000_hw.h  e1000_reg.h  e1000d.h  kb_scancodes.h  kbd.h  netd.h  network.h  nfsd.h  pci_structs.h  pio.h  piped.h  rshd.h  statd.h  static_ip.h  sysd.h  syspid.h  vgad.h  vgareg.h
usr/include/sbin/UNUSED/: dma-private.h
usr/include/sbin/libnfs/: libnfs-private.h
usr/include/sbin/libnfs/nfsc/: libnfs-zdr.h  libnfs.h
usr/include/sbin/lwip/: README  api.h  api_msg.h  arch.h  autoip.h  cc.h  debug.h  def.h  dhcp.h  dns.h  err.h  etharp.h  icmp.h  igmp.h  inet.h  inet_chksum.h  init.h  ip.h  ip_addr.h  ip_frag.h  lwipopts.h  mem.h  memp.h  netbuf.h  netdb.h  netif.h  netifapi.h  opt.h  pbuf.h  perf.h  ppp_oe.h  raw.h  sio.h  slipif.h  snmp.h  snmp_asn1.h  snmp_msg.h  snmp_structs.h  sockets.h  stats.h  (+7 more)
usr/include/sys/: errno.h  ioctl.h  msg.h  msg_types.h  poll.h  socket.h  swint.h  syscall.h  syslog.h  termios.h  termios.h.madeup  types.h  wait.h
usr/include/utils/: bool.h  hash.h  queue.h  shash.h  tutils.h
usr/sbin/: CMakeLists.txt  README
usr/sbin/daemond/: CMakeLists.txt  create-daemon  daemond.c  daemond_if.c  daemond_utils.c
usr/sbin/e1000d/: CMakeLists.txt  e1000d.c  e1000d_sys.c
usr/sbin/kbd/: CMakeLists.txt  kbd.c
usr/sbin/netd/: CMakeLists.txt  bsock.c  driver_api.c  netd.c  static_ip_table.c
usr/sbin/nfsd/: CMakeLists.txt  nfsd.c  nfsd_if.c  nfsd_utils.c
usr/sbin/pio/: pio.S
usr/sbin/piped/: CMakeLists.txt  piped.c  piped_if.c  piped_utils.c
usr/sbin/statd/: CMakeLists.txt  statd.c  statd_if.c  statd_utils.c
usr/sbin/sysd/: CMakeLists.txt  sysd.c  sysd_if.c  sysd_utils.c
usr/sbin/vgad/: CMakeLists.txt  vga_driver.c  vgad.c
usr/src/: CMakeLists.txt
usr/src/apps/: CMakeLists.txt  hello.c
usr/src/libgloss/: CMakeLists.txt  __stack_chk_fail.c  _exit.c  alarm.c  close.c  crt0.S  environ.c  execve.c  fcntl.c  fork.c  fstat.c  get_core.c  getpid.c  ioctl.c  isatty.c  kill.c  link.c  lseek.c  msgbuff.c  open.c  poll.c  pty.c  read.c  redirect.c  sbrk.c  stat.c  times.c  unlink.c  usleep.c  wait.c  waitpid.c  write.c
usr/src/liblwip/: CMakeLists.txt
usr/src/liblwip/api/: api_lib.c  api_msg.c  err.c  netbuf.c  netdb.c  netifapi.c  sockets.c  tcpip.c
usr/src/liblwip/core/: def.c  dhcp.c  dns.c  init.c  mem.c  memp.c  netif.c  pbuf.c  raw.c  stats.c  sys.c  sys_arch.c  tcp.c  tcp_in.c  tcp_out.c  timers.c  udp.c
usr/src/liblwip/core/ipv4/: autoip.c  icmp.c  igmp.c  inet.c  inet_chksum.c  ip.c  ip_addr.c  ip_frag.c
usr/src/liblwip/core/snmp/: asn1_enc.c  mib2.c  mib_structs.c  msg_in.c  msg_out.c
usr/src/liblwip/netif/: etharp.c  ethernetif.c  slipif.c
usr/src/liblwip/netif/ppp/: auth.c
usr/src/libsocket/: CMakeLists.txt  socket.c  socketlib.c
usr/src/libsyscall/: CMakeLists.txt  msg.c  signal.c  swint.S  syscall.c
usr/src/newlib/: README
usr/src/newlib/newlib-2.0.0/newlib/: configure.host
usr/src/newlib/newlib-2.0.0/newlib/libc/include/sys/: _default_fcntl.h
usr/src/newlib/newlib-2.0.0/newlib/libc/reent/: closer.c
usr/src/utils/: CMakeLists.txt  cp.c  hash.c  ifconfig.c  jobs.c  lock.c  ls.c  mkdir.c  mv.c  ps.c  queue.c  reboot.c  rm.c  rmdir.c  shash.c  shell.c  shutdown.c  slash.c  touch.c
usr/test/: CMakeLists.txt  aim9.c  dot.c  echo.c  foo.c  mptest.h  t12.c  t13.c  t6.c  t7.c  talarm.c  tbug.c  tcmdln.c  tdaemond.c  tenv.c  texit.c  tfile.c  tfork.c  tharness.c  thash.c  tjobs.c  tmalloc.c  tnetfns.c  tnfsd.c  tnfsd2.c  tpath.c  tpiped.c  tprinter.c  tq1.c  tq2.c  tq3.c  tq4.c  trefresh.c  trshd.c  tscanf.c  tshash.c  tstatd.c  tsysd.c  tudp.c  tutils.c
(+7855 files in other folders)
